[gd_scene load_steps=3 format=3 uid="uid://dstqc5agwgox3"]

[ext_resource type="Script" uid="uid://7egkv0utp30f" path="res://Game.gd" id="1_80nbo"]
[ext_resource type="Texture2D" uid="uid://de7iqprgigjin" path="res://2933038.png" id="2_e2o6t"]

[node name="game" type="Node"]
script = ExtResource("1_80nbo")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14161164, 0.35989624, 0.2520681, 1)

[node name="Play_Hand" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 161.0
offset_top = 604.0
offset_right = 281.0
offset_bottom = 664.0
text = "играть руку"

[node name="Discard" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 721.0
offset_top = 596.0
offset_right = 841.0
offset_bottom = 656.0
text = "сбросить"

[node name="Card_7" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 700.0
offset_top = 400.0
offset_right = 766.0
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_6" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 600.0
offset_top = 400.0
offset_right = 666.0
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_5" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 500.0
offset_top = 400.0
offset_right = 566.0
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_4" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 400.0
offset_top = 400.0
offset_right = 466.0
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_3" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 300.0
offset_top = 400.0
offset_right = 366.0
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_2" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 200.0
offset_top = 400.0
offset_right = 265.99976
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Card_1" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 400.0
offset_right = 166.00005
offset_bottom = 462.0
scale = Vector2(1.5, 1.5)

[node name="Reset" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 726.0
offset_top = 76.0
offset_right = 911.0
offset_bottom = 128.0
text = "сбросов"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Move" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 733.0
offset_top = 22.0
offset_right = 896.0
offset_bottom = 61.0
text = "ходов"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Deck" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 308.0
offset_top = 605.0
offset_right = 688.0
offset_bottom = 665.0
text = "осталось карт:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="My_Account" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 150.0
offset_top = 67.0
offset_right = 523.0
offset_bottom = 113.0
text = "ваши очки:"
horizontal_alignment = 1

[node name="TextureButton" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_left = 167.00002
offset_top = 39.0
offset_right = 679.0
offset_bottom = 551.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("2_e2o6t")
